# released_script_claude_anon

./: .gitignore  CLAUDE_ANON.md  README.md  generate_mock_pdfs.py  main_anon.py  pyproject.toml  released_run.ps1  run.ps1  test_main.py
output/: ACCT_AND_STAT.FRI.csv  RELEASE_CBS.FRI.csv
