[project]
name = "released-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fpdf2>=2.8.5",
    "pandas>=2.3.3",
    "pdfminer-six>=20250506",
    "pdfplumber>=0.11.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
